...
        } else {
            showParticipationErrorUi(resultCode: resultCode)
        }
    }
    
    private func showParticipationUi(participation: Participation) {
        let alert = UIAlertController(title: "Welcome participant", message: participation.entryMessage, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Got it", style: .default, handler: { _ in
            self.dismiss(animated: true, completion: nil)
        }))
        present(alert, animated: true, completion: nil)
    }
    
    private func showParticipationErrorUi(resultCode: EndpointResult) {
...
