...
    let tournaments: [Tournament]
    let participation: Participation
    
    init() {
        let fakeUrl: URL = URL(string: "www.fake.com")!
        
        red = Tournament(id: UUID(), name: "Red", type: "Tournament", createdAt: Date(), enterUrl: fakeUrl, detailsUrl: fakeUrl)
        blue = Tournament(id: UUID(), name: "Blue", type: "Tournament", createdAt: Date(), enterUrl: fakeUrl, detailsUrl: fakeUrl)
        tournaments = [red, blue]
        
        participation = Participation(id: UUID(), type: "Participation", entryMessage: "A new challenger has entered", createdAt: Date(), detailsUrl: fakeUrl)
    }
    
...
